# ProcessKit-CLI

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  release-token-bypass.md
.github/workflows/: ci.yml  release.yml
docs/: ROADMAP.md  architecture.md  control-plane.md  env-launch.md  exit-codes.md  integration.md  registry.md  schema.md
fixtures/schema/v1/: README.md  events.jsonl  schema.json
src/: capture.rs  cli.rs  control.rs  events.rs  exit.rs  hash.rs  lib.rs  list.rs  main.rs  probe.rs  prune.rs  registry.rs  run.rs  win_security.rs
tests/: e2e.rs  events.rs  integration.rs  probe.rs  registry.rs  run.rs
tests/common/: mod.rs
