[package]
name = "processkit-cli"
version = "0.1.0"
edition = "2024"
description = "Standalone CLI runner for ProcessKit process-tree containment and lifecycle diagnostics"
license = "MIT"
repository = "https://github.com/ZelAnton/ProcessKit-CLI"
readme = "README.md"
# Minimum Supported Rust Version. Edition 2024 needs >=1.85, but the `processkit`
# dependency raises the real floor to 1.88, so that is the declared MSRV. Raise it
# when you adopt a newer language/std feature or bump a dependency's floor. The
# `msrv` CI job verifies it — keep the two in sync.
rust-version = "1.88"

# ---------------------------------------------------------------------------
# Dependencies
#
# Convention (see CONTRIBUTING.md "Conventions"): this project fixes NO
# allow-list of crates. Add whatever your project needs — but give every new
# dependency an inline comment explaining *why* it's here and what it's used
# for, so the next reader (human or agent) doesn't have to guess. Pin major
# versions, prefer well-maintained crates, and keep Cargo.lock committed.
#
# Example:
#   serde = { version = "1", features = ["derive"] }  # (de)serialize config
# ---------------------------------------------------------------------------
[dependencies]
# Command-line parsing. The `derive` API expresses the normative CLI surface —
# the four subcommands, their flags, and the verbatim `-- <program> <args...>`
# tail — that AGENTS.md counts as part of the compatibility surface.
clap = { version = "4", features = ["derive"] }
# ProcessKit's public API: the kernel-backed containment and teardown boundary
# this runner is built on (the single source of truth for lifecycle semantics).
# `run` owns a `ProcessGroup` and streams the child through it; the control-plane
# paths that also call it land in later tasks (docs/ROADMAP.md).
processkit = "2"
# Async runtime that drives the tokio-based `processkit` API. A small
# current-thread runtime hosts the run; `io-std` provides the async stdout/stderr
# sinks the child's output is teed to. `time` arms the `--timeout` deadline timer
# and the `--grace` window, `signal` the `Ctrl-C` listener, and `macros` the
# `select!` that races them against the child's own exit. The child-pipe I/O
# driver is compiled in via `processkit`'s own tokio `process`/`net` features
# (Cargo unifies feature flags across the one tokio build).
tokio = { version = "1", features = ["rt", "io-std", "time", "signal", "macros"] }

[dev-dependencies]

# Unix-only: the cancel integration test needs to deliver a real SIGINT (the
# `Ctrl-C` the runner listens for) to the spawned runner process, which the std
# library cannot do. Behind a `cfg(unix)` target table so Windows builds — where
# an isolated Ctrl-C cannot be sent to a single child — never pull it.
[target.'cfg(unix)'.dev-dependencies]
libc = "0.2"

# Platform-specific dependencies go under a cfg target table, e.g.:
# [target.'cfg(windows)'.dependencies]
# winapi-util = "0.1"  # <why this Windows-only dependency is needed>
