[package]
name = "processkit-cli"
version = "0.1.0"
edition = "2024"
description = "Standalone CLI runner for ProcessKit process-tree containment and lifecycle diagnostics"
license = "MIT"
repository = "https://github.com/ZelAnton/ProcessKit-CLI"
readme = "README.md"
# Minimum Supported Rust Version. Edition 2024 needs >=1.85, but the `processkit`
# dependency raises the real floor to 1.88, so that is the declared MSRV. Raise it
# when you adopt a newer language/std feature or bump a dependency's floor. The
# `msrv` CI job verifies it — keep the two in sync.
rust-version = "1.88"

# ---------------------------------------------------------------------------
# Dependencies
#
# Convention (see CONTRIBUTING.md "Conventions"): this project fixes NO
# allow-list of crates. Add whatever your project needs — but give every new
# dependency an inline comment explaining *why* it's here and what it's used
# for, so the next reader (human or agent) doesn't have to guess. Pin major
# versions, prefer well-maintained crates, and keep Cargo.lock committed.
#
# Example:
#   serde = { version = "1", features = ["derive"] }  # (de)serialize config
# ---------------------------------------------------------------------------
[dependencies]
# Command-line parsing. The `derive` API expresses the normative CLI surface —
# the four subcommands, their flags, and the verbatim `-- <program> <args...>`
# tail — that AGENTS.md counts as part of the compatibility surface.
clap = { version = "4", features = ["derive"] }
# (De)serialize the versioned JSONL event schema — this project's public,
# golden-tested event contract. `derive` gives each event struct its `Serialize`
# impl; `serde_json` writes one compact JSON object per line to the `--jsonl`
# file (and parses lines back in the through-the-binary tests).
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# ProcessKit's public API: the kernel-backed containment and teardown boundary
# this runner is built on (the single source of truth for lifecycle semantics).
# `run` owns a `ProcessGroup` and streams the child through it; the control-plane
# paths that also call it land in later tasks (docs/ROADMAP.md).
processkit = "2"
# Async runtime that drives the tokio-based `processkit` API. A small
# current-thread runtime hosts the run; `io-std` provides the async stdout/stderr
# sinks the child's output is teed to. `time` arms the `--timeout` deadline timer
# and the `--grace` window, `signal` the `Ctrl-C` listener, and `macros` the
# `select!` that races them against the child's own exit. `net` provides the local
# control-plane transport (unix domain socket / Windows named pipe, see
# `src/control.rs`) and `io-util` its line-oriented request/response codec. `sync`
# provides the `mpsc` channel the control server signals a `cancel`/`kill` verb
# through to the run's `select!` loop (the loop owns teardown; the server never tears
# a run down itself). The child-pipe I/O driver is compiled in via `processkit`'s own
# tokio `process`/`net` features (Cargo unifies feature flags across the one tokio
# build).
tokio = { version = "1", features = [
    "rt",
    "io-std",
    "io-util",
    "net",
    "time",
    "signal",
    "sync",
    "macros",
] }

[features]
# Opt-in end-to-end containment tier (`tests/e2e.rs`) plus its `e2e_helper`
# worker. Off by default so `cargo test` stays fast; these spawn real, multi-level
# process trees and run longer. The dedicated CI `e2e` job enables it. Empty
# feature set — it only gates which targets build (see the `[[test]]` / `[[bin]]`
# `required-features` below).
e2e = []

# Unix-only: the run registry (src/registry.rs) restricts its directory to `0700`
# via std, but the per-run liveness lock — a BSD `flock` whose OS-released-on-death
# semantics make an orphaned entry detectably stale — has no std wrapper, so it
# calls `flock`/`LOCK_EX`/`EWOULDBLOCK` through libc directly.
[target.'cfg(unix)'.dependencies]
libc = "0.2"

# Windows-only: the run registry (src/registry.rs) needs two Win32 facilities with
# no std equivalent — a *protected* owner-only DACL (the equivalent of unix `0700`;
# built and applied via the Authorization/Security APIs) and the `LockFileEx`
# liveness lock. Only the security, file-locking, token, and memory surfaces are
# enabled. windows-sys is already in the tree transitively (tokio/processkit).
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_Threading",
] }

[dev-dependencies]

# Unix-only: the cancel integration test needs to deliver a real SIGINT (the
# `Ctrl-C` the runner listens for) to the spawned runner process, which the std
# library cannot do. Also backs the e2e tier's external PID-liveness probe
# (`kill(pid, 0)`, no signal delivered). Behind a `cfg(unix)` target table so
# Windows builds — where an isolated Ctrl-C cannot be sent to a single child, and
# the PID probe uses `tasklist` — never pull it.
[target.'cfg(unix)'.dev-dependencies]
libc = "0.2"

# The end-to-end tier and its helper worker are gated behind the `e2e` feature so
# a default `cargo test`, a plain `cargo build`, and `cargo publish` never build
# or ship them. Cargo skips a target whose `required-features` are unmet, and sets
# `CARGO_BIN_EXE_e2e_helper` for the tier only when the helper is built alongside
# it (i.e. under `--features e2e`).
[[bin]]
name = "e2e_helper"
path = "src/bin/e2e_helper.rs"
required-features = ["e2e"]

[[test]]
name = "e2e"
path = "tests/e2e.rs"
required-features = ["e2e"]
